:white_check_mark:Added new file and code

--- a/Learn/lecture -5/index.html
+++ b/Learn/lecture -5/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap"
       rel="stylesheet"
     />
-    <title>Module-2</title>
+    <title>UHost</title>
   </head>
 
   <body>
@@ -44,8 +44,8 @@
         <h1 class="section-title">Choose Your Plan</h1>
         <div>
           <article class="plan">
-            <h1>FREE</h1>
-            <h2>$0/month</h2>
+            <h1 class="plan__title">FREE</h1>
+            <h2 class="plan__price">$0/month</h2>
             <h3>For hobby projects or small teams.</h3>
             <ul class="plan__features">
               <li class="plan__feature">1 Workspace</li>
@@ -54,13 +54,13 @@
               <li class="plan__feature">Basic Support</li>
             </ul>
             <div>
-              <button>CHOOSE PLAN</button>
+              <button class="button">CHOOSE PLAN</button>
             </div>
           </article>
           <article class="plan plan--highlighted">
             <h1 class="plan__annotation">RECOMMENDED</h1>
-            <h1>PLUS</h1>
-            <h2>$29/month</h2>
+            <h1 class="plan__title">PLUS</h1>
+            <h2 class="plan__price">$29/month</h2>
             <h3>For ambitious projects.</h3>
             <ul class="plan__features">
               <li class="plan__feature">5 Workspaces</li>
@@ -70,12 +70,12 @@
             </ul>
 
             <div>
-              <button>CHOOSE PLAN</button>
+              <button class="button">CHOOSE PLAN</button>
             </div>
           </article>
           <article class="plan">
-            <h1>PREMIUM</h1>
-            <h2>$99/month</h2>
+            <h1 class="plan__title">PREMIUM</h1>
+            <h2 class="plan__price">$99/month</h2>
             <h3>Your enterprise solution.</h3>
             <ul class="plan__features">
               <li class="plan__feature">10 Workspaces</li>
@@ -85,11 +85,51 @@
             </ul>
 
             <div>
-              <button>CHOOSE PLAN</button>
+              <button class="button">CHOOSE PLAN</button>
             </div>
           </article>
         </div>
       </section>
+
+      <!-- For the features in read color -->
+
+      <section id="key-features">
+        <h1 class="section-title">Many good Reasons to Stick Around</h1>
+        <ul class="key-feature__list">
+          <li class="key-feature">
+            <div class="key-feature__image">
+
+            </div>
+            <p class="key-feature__des">3,857,000 Trusting Customers</p>
+          </li>
+          <li class="key-feature">
+            <div class="key-feature__image">
+
+            </div>
+            <p class="key-feature__des">99.999% Uptime Guarantee</p>
+          </li>
+          <li class="key-feature">
+            <div class="key-feature__image">
+
+            </div>
+            <p class="key-feature__des">Lightning Fast CDN</p>
+          </li>
+        </ul>
+      </section>
     </main>
+
+    <!-- For the footer -->
+    <footer class="main-footer">
+      <nav>
+        <ul class="main-footer__links">
+          <li class="main-footer__link">
+            <a href="#">Support</a>
+          </li>
+          <li class="main-footer__link">
+            <a href="#">Terms of Use</a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
