--- a/Learn/lecture -5/index.html
+++ b/Learn/lecture -5/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="shared.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap"
       rel="stylesheet"
     />
+
     <title>UHost</title>
   </head>
 
@@ -97,21 +99,15 @@
         <h1 class="section-title">Many good Reasons to Stick Around</h1>
         <ul class="key-feature__list">
           <li class="key-feature">
-            <div class="key-feature__image">
-
-            </div>
+            <div class="key-feature__image"></div>
             <p class="key-feature__des">3,857,000 Trusting Customers</p>
           </li>
           <li class="key-feature">
-            <div class="key-feature__image">
-
-            </div>
+            <div class="key-feature__image"></div>
             <p class="key-feature__des">99.999% Uptime Guarantee</p>
           </li>
           <li class="key-feature">
-            <div class="key-feature__image">
-
-            </div>
+            <div class="key-feature__image"></div>
             <p class="key-feature__des">Lightning Fast CDN</p>
           </li>
         </ul>
