--- a/Learn/lecture -5/packages/index.html
+++ b/Learn/lecture -5/packages/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../shared.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="packages.css">
     <title>UHost</title>
   </head>
 
   <body>
     <header class="main-header">
       <div>
-        <a href="index.html" class="main-header__brand"> uHost </a>
+        <a href="../index.html" class="main-header__brand"> uHost </a>
       </div>
 
       <nav class="main-nav">
@@ -26,10 +27,10 @@
             <a href="packages/index.html">Packages</a>
           </li>
           <li class="main-nav__item">
-            <a href="customers/index.html">Customers</a>
+            <a href="../customers/index.html">Customers</a>
           </li>
           <li class="main-nav__item main-nav__item--cta">
-            <a href="start-hosting/index.html">Start Hosting</a>
+            <a href="../start-hosting/index.html">Start Hosting</a>
           </li>
         </ul>
       </nav>
